<resources>
    <string name="app_name">Yiwu</string>
    <string name="button_get">OkHttpGet</string>
    <string name="button_post">POST</string>
    <string name="button_md5">MD5</string>
    <string name="title_activity_aaa">aaaActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_account">Account</string>
    <string name="text_coach">教练:</string>
    <string name="text_store">门店:</string>
    <string name="text_date">日期：</string>
    <string name="text_time">时间段：</string>
    <string name="text_member">会员:</string>
    <string name="hint_edit_member">请输入会员姓名</string>
    <string name="text_startTime">开始时间:</string>
    <string name="text_endTime">结束时间:</string>
    <string name="textView_hours">时长:</string>
</resources>
