<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yinzhiwu.yiwu.ArrangePrivateLessonActivity"
    android:orientation="vertical">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="3"
       android:textSize="@dimen/lable_size"
            android:text="@string/text_store"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/spinner_store"
            android:layout_width="0dip"
            android:layout_weight="5.5"
            android:layout_height="match_parent"></Spinner>
        <TextView
            android:layout_width="0dip"
            android:layout_weight="1.5"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:text="@string/text_date"
            android:textSize="@dimen/lable_size" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:editable="false"
            android:inputType="date" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="0dip"
            android:onClick="selectDate"
            android:layout_height="45dip"
            android:layout_weight="1.5"
            android:background="@mipmap/calendar" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/text_startTime"
            android:textSize="@dimen/lable_size" />

        <EditText
            android:id="@+id/edit_startTime"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:editable="false"
            android:inputType="time" />

        <Button
            android:id="@+id/button_startTime"
            android:layout_width="0dip"
            android:onClick="selectTime"
            android:layout_height="48dip"
            android:layout_weight="1.5"
            android:background="@mipmap/clock" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_endTime"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/text_endTime"
            android:textSize="@dimen/lable_size" />

        <EditText
            android:id="@+id/editText_endTime"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:editable="false"
            android:inputType="time" />

        <Button
            android:id="@+id/button_endTime"
            android:layout_width="0dip"
            android:onClick="selectTime"
            android:layout_height="48dip"
            android:layout_weight="1.5"
            android:background="@mipmap/clock" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="3"
            android:textSize="@dimen/lable_size"
            android:text="@string/textView_hours"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/editText_hours"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:editable="false"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="0dip"
            android:layout_weight="1.5"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_member"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/text_member"
            android:textSize="@dimen/lable_size" />

        <EditText
            android:id="@+id/edit_member"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5"
            android:editable="false"
            android:hint="@string/hint_edit_member"
            android:inputType="date" />

        <Button
            android:id="@+id/button_member"
            android:layout_width="0dip"
            android:layout_height="48dip"
            android:layout_weight="1.5"
            android:background="@mipmap/search"
            android:onClick="searchMember" />

    </LinearLayout>

</LinearLayout>